# Ledgero-API

./: .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  build-images.sh  docker-compose.yaml  readme.md  sqlx-data.json
auth/: Cargo.toml
auth/src/: lib.rs
cli/: Cargo.toml
cli/src/: arguments.rs  error.rs  main.rs  operations.rs
server/: Cargo.toml  sqlx-data.json
server/.sqlx/: query-0086e200357b74e1334fda3ca2b339c458c586e728c142acec07d67b894ebdf7.json  query-0261ba087de2372a2479dc3e7317d71cc92b344626c6966b8e8783656b3432b5.json  query-05df81694fa9810f61ad52bd29e245e1b52de13ce693bebf1ccc185f04e01cfc.json  query-0b9f72c7fafbb3f88853d7b3ee79e15daef74d4f1ea09c1c07d18379795778cf.json  query-113783cb2f967c3d1b79b84b69eb720533429cd046b06eb6572fd8f05d0e11a1.json  query-1172527980182322e2d35251de4feacbd2d8f2928d363256eea718444b3c5dad.json  query-11cab86049c3e4da53b2ab085595d4f52a46f885805f5d569c83c00c01c1d62e.json  query-147e5b70989a989f40ed78d3d98a2b2d5ad181b66dabbaa79624e95b5ceff62a.json  query-188b8a352f9d4542acc486ee4de3c5b2de8637c319329c5f660188dd9abc5576.json  query-191d1075e1bc6ffbd52d8a89f1ecc97a06e4fe1efd66ff7314db0ab2c3c179b3.json  query-20c1868d3f25b019265f3f820ffa53c7c22e0f04e7d9bb1cabd54e14faf927f1.json  query-2225082b51b9e76fcbf6c94587035289ecd858b593ab1e6288570fdc67000c8e.json  query-22b11d0cb63e15cada720710d6a84dd2ef13b2cb393ae881d8b310e6906ba4fd.json  query-246d74d609b540bdc6cd3aeaf662e76759d5125f0014891289c9138a14632dc5.json  query-259cb5f9e2f1147e2c4d963f49631bb1248f46149a65b651996bf67288706c0a.json  query-2aa5689445c20a3ca2ca9f7c5c266676be7be439b85cdb18d6597b6875f27589.json  query-2b0ee5df21696aaeb6da7c7d99921aa32cb61d54169123491955d11a24c05942.json  query-2cf89c2713b233564363d45e543900c32afd825a424d0a3d8183c5330898f7d5.json  query-2d199cb11775c35e3f4763203ecc643de2f5cc647c711c70c6569b70526ee081.json  query-2e0ed4875f97a8fd36ca6008277d3c87dda9298eb50203313c5797049a5e3b13.json  query-3127cf41d5114115b06ed99637f2006a24ee9c6c7d7b3d3702501b5bccf465c5.json  query-36087e57700c58581778c7f55cf00830b2d6e57f94f44f9b83653343b82082be.json  query-393bc5d55f4d75ef47f815eec390a14b6254b82a8ebb539527368a9422a6f304.json  query-3b31109a906779b3a717081186c66fe9fcfa2b0edd5d19b7f88c5d9eab8c0cdd.json  query-3f494b7c15d53444ba98053c72ca66eaf324959b8f80e89a54e47c7bdedc168b.json  query-413ce9b3673a3bf4f75a945740bb791e8b913b52c6248c315b3554528ea0f6b0.json  query-4216c6e72123213d3aebcca767d48af32810c182fc64b88267a4f72633c7b888.json  query-44bf844bb2f6a51672396286f98f9c67b7eca219a2895fdd9763eed046861a55.json  query-44c08accce99e6c456616717a3345f2c8fb94ab3c998712de94edc274536d8be.json  (+62 more)
server/migrations/: 20230201132550_initial.sql  (+19 more)
(+363 files in other folders)
