[package]
name = "jumpdrive-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"
base64-url = "1.4.13"
rsa = "0.8.0"
hmac = "0.12.1"
sha2 = { version = "0.10.6", features = ["oid"] }
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
