[package]
name = "ledgero-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rsa = "0.8.0"
clap = { version = "4.2.1", features = ["derive"] }
dialoguer = "0.10.3"
ledgero-server = { path = "../server" }
tokio = { version = "1.27.0", features = ["rt"] }
