[package]
name = "ledgero-server"
version = "1.0.0-Alpha.1"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "ledgero_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jumpdrive-auth = { path = "../auth" }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "time", "offline"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = "0.4.23"
base64-url = "1.4.13"
rsa = "0.8.0"
hmac = "0.12.1"
sha2 = { version = "0.10.6", features = ["oid"] }
rand = { version = "0.8.5", features = ["std_rng"] }
csv = "1.1.6"
once_cell = "1.17.1"
directories = "4.0.1"
infer = "0.13.0"
async-rwlock = "1.3.0"
env_logger = "0.10.0"
log = "0.4.17"
